<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapMyHouse</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">Displays current address and current or updated location using Location Services</string>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="title_activity_register_my_location">RegisterMyLocation</string>
    <string name="location_details">Location details</string>
    <string name="location_image">Location image</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_address">Enter address</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Register</string>
    <string name="unique_id">Unique#</string>
    <string name="register">Register</string>
    <string name="locality">Locality</string>
    <string name="admin">Administrator area</string>
    <string name="postal">Postal code</string>
    <string name="country">Country</string>
    <string name="geocoder_connection_error">Connection error, not able to load address details.</string>
    <string name="search">Search</string>
    <string name="search_hint">enter MMH id or Ph#</string>
    <string name="navigation">Navigation</string>
    <string name="search_by_phone_number">Search by Phone number</string>
    <string name="wrong_query">Search by wrong ID</string>
    <string name="phone_number">Phone number</string>
    <string name="my_address_details">Address Details</string>
    <string name="register_location">Register Location</string>
    <string name="save">Save</string>
    <string name="post_progress_title">Posting to server</string>
    <string name="post_progress_message">Registering...</string>
    <string name="unsucessfull_register">Registeration not successful</string>
    <string name="sucessfull_register">successfully registered</string>
    <string name="geo_info">Geo Information</string>
    <string name="address_header">Address</string>
    <string name="phone_number_short">Phone#</string>
    <string name="my_house_location">My House Location</string>
	<string name="my_page">My Page</string>
	<string name="move_to_my_location">Move to my location</string>
	<string name="share_uid">Share Uid</string>
	<string name="update_map">Update address</string>
	<string name="mapview">Map view</string>
	<string name="send_to">Send via</string>
</resources>