<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.samplemaps.MainActivity" >

    <item
        android:id="@+id/register"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/register"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/navigation"
        android:icon="@drawable/images"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/navigation"/>
    

</menu>