<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/geo_info"
            android:textColor="@color/text_header_background"
            android:textSize="17sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/horizontal_divider_selector" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/mylatitude"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="@string/latitude"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/mylatitude"
                android:text=":"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mylatitudevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/view1"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/mylongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/longitude"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/mylongitude"
                android:text=":"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/mylongitudevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/view2"
                android:textSize="17sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/phone_number"
            android:textColor="@color/text_header_background"
            android:textSize="17sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/horizontal_divider_selector" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/phone_no"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:text="@string/phone_number_short"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/phone_no"
                android:text=":"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/myPhone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/view4"
                android:background="@drawable/edit_text_background_selector"
                android:inputType="phone" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/my_address_details"
            android:textColor="@color/text_header_background"
            android:textSize="17sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/horizontal_divider_selector" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/myAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_background_selector"
                android:hint="@string/enter_address"
                android:maxLines="4" />

            <EditText
                android:id="@+id/myLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/myAddress"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_background_selector"
                android:hint="@string/locality" />

            <EditText
                android:id="@+id/myAdminArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/myLocality"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_background_selector"
                android:hint="@string/admin" />

            <EditText
                android:id="@+id/myPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/myAdminArea"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_background_selector"
                android:hint="@string/postal" />

            <EditText
                android:id="@+id/myCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/myPostalCode"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_background_selector"
                android:hint="@string/country" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>